# NewChanlun

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  SKILL.md  cc-new-session-briefing.md  charting-library-context.txt  debug_divergence.py  definitions.yaml  meta-lead.md  pyproject.toml  setup_vps.sh  缠论知识库.md
.chanlun/: concept-paths  dispatch-dag.yaml  dispatch-spec.yaml  downstream-action-audit-v17.md  downstream-action-overrides.yaml  genesis.md  manifest.yaml  pattern-buffer.yaml  roadmap.yaml  type-vocabulary.yaml
.claude/: settings.json  settings.local.json
deploy/: CLAUDE.md  CLAUDE.md.example  DEPLOY.md  install.sh
docs/: chan_spec.md  ci_secrets.md  formal_axioms.md  runbook_observability.md  terminology_code_map.md
frontend/: package-lock.json  package.json  vite.config.ts
references/: session-template.md
scripts/: README_DATABENTO.md  batch_fetch_1min.py  ceremony_scan.py  dag_sync.py  dev.ps1  downstream_audit.py  fetch_blog_courses.py  fetch_databento.py  gemini_genealogy_verify_prompt.py  genealogy_semantic_check.py  meta-observer-history.py  session_update.py  stress_test_c2.py  swarm-start.ps1  topology_scan.py  validate_ratio_pipeline.py
tests/: test_026_real_data_validation.py  test_ab_bridge_overlay.py  test_bi_differ.py  test_bi_engine.py  test_bsp_confirmed_semantic.py  test_bsp_diff_identity.py  test_bsp_invariants.py  test_bsp_negation_propagation.py  test_bsp_overlap_golden.py  test_bsp_type1_golden.py  test_bsp_type2_golden.py  test_bsp_type3_golden.py  test_buysellpoint_events.py  test_buysellpoint_v1.py  (+85 more)
(+752 files in other folders)
