[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newchan"
version = "0.1.0"
description = "缠论量化分析工具"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
    "matplotlib",
    "python-dotenv",
    "ib_insync",
    "lightweight-charts",
    "databento",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "google-genai>=1.64",
    "mcp>=1.0",
]

[project.scripts]
newchan = "newchan.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools.packages.find]
where = ["src"]
